[tool.poetry]
name = "liame"
version = "0.1.0"
description = ""
authors = ["Kibekityo Juma Shafara <jumashafara0@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
pillow = "^10.1.0"
django-markdown = "^0.8.4"
django-allauth = "^0.57.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
